--- a/src/components/Featured/featured.module.css
+++ b/src/components/Featured/featured.module.css
@@ -59,6 +59,11 @@
   text-decoration: underline;
   color: rgb(112, 112, 112);
 }
+.outer {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
 .main {
   display: flex;
   flex-wrap: nowrap;
