--- a/src/components/Slide/slide.module.css
+++ b/src/components/Slide/slide.module.css
@@ -1,6 +1,6 @@
 .slide {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(255, 255, 255, 0)),
-    url(https://assets3.thrillist.com/v1/image/2759524/1200x600/scale;);
+    url(../../assets/bg.jpeg);
   max-width: 5000px;
   width: 100%;
   height: 500px;
